fixed image cropping issues

--- a/src/components/Channel/Channel.css
+++ b/src/components/Channel/Channel.css
@@ -1,8 +1,17 @@
 .avatar_sm {
+    object-fit: cover;
     height: 20px;
+    width: 20px;
     border-radius: 50%;
 }
 
 .channel-members-list {
     list-style-type: none;
+}
+
+.channel-page-pic {
+    object-fit: cover;
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
 }
